<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SandwichStudio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Order form</string>
    <string name="bread_options">Bread</string>
    <string name="wheat_option">Wheat</string>
    <string name="white_option">White</string>
    <string name="rye_option">Rye</string>
    <string name="toppings_options">Toppings</string>
    <string name="tomato_option">Tomato</string>
    <string name="lattuce_option">Lattuce</string>
    <string name="onion_option">Onion</string>
    <string name="grated_carrot_option">Grated carrot</string>
    <string name="olives_option">Olives</string>
    <string name="sesame_seeds_option">Sesame seeds</string>
    <string name="ham_option">Ham</string>
    <string name="cheese_option">Cheese</string>
    <string name="place_order">Place my order</string>
    <string name="title_activity_order_confirmation">Order confirmation</string>
    <string name="successful_order">Your order was successfully taken.</string>
    <string name="order_resume_title">" Order resume:"</string>
    <string name="order_resume_begin">You asked for a sandwich</string>
    <string name="order_resume_bread_begin">" with "</string>
    <string name="wheat">wheat</string>
    <string name="white">white</string>
    <string name="rye">rye</string>
    <string name="order_resume_bread_end">" bread"</string>
    <string name="order_resume_topping_begin">" and "</string>
    <string name="tomato">tomato</string>
    <string name="lattuce">lattuce</string>
    <string name="onion">onion</string>
    <string name="grated_carrot">grated carrot</string>
    <string name="olives">olives</string>
    <string name="sesame_seeds">sesame seeds</string>
    <string name="ham">ham</string>
    <string name="cheese">cheese</string>
    <string name="order_resume_topping_and">" and "</string>
    <string name="no_topping">nothing</string>
    <string name="order_resume_topping_end">" for topping"</string>

</resources>
